--- a/ansible/roles/mssql/defaults/main.yml
+++ b/ansible/roles/mssql/defaults/main.yml
@@ -39,15 +39,15 @@ domain_controller: groups['ddc'][0]
 # regex statements used in some steps expect the format of CONTOSO\
 # do not use @CONTOSO.com for these accounts as SQL install will fail
 mssql_sqlsvc_account: GO\sql_svc
-mssql_sqlsvc_account_pass: "{{ ansible_password }}"
+mssql_sqlsvc_account_pass: "{{ hostvars['localhost']['sql_svc'] }}"
 
 # SQL Agent Service Account
 mssql_agentsvc_account: GO\sql_agt
-mssql_agentsvc_account_pass: "{{ ansible_password }}"
+mssql_agentsvc_account_pass: "{{ hostvars['localhost']['sql_agt'] }}"
 
 # SQL Analysis Services Account
-mssql_assvc_account: "{{ mssql_sqlsvc_account }}"
-mssql_assvc_account_pass: "{{ mssql_sqlsvc_account_pass }}"
+mssql_assvc_account: GO\sql_svc
+mssql_assvc_account_pass: "{{ hostvars['localhost']['sql_svc'] }}"
 
 ### File and Folder Paths ###
 
