Update to the DNS Domain name

--- a/ansible/roles/loadgen/tasks/profiles.yml
+++ b/ansible/roles/loadgen/tasks/profiles.yml
@@ -22,7 +22,7 @@
   win_xml:
     path: C:\ProgramData\LoadGen\Director\LoadGenRunAsProfiles.xml
     xpath: "/*[local-name()='RunAsProfileDataset']/*[local-name()='RunAsProfiles']/*[local-name()='Domain']"
-    fragment: "{{ domain_name }}"
+    fragment: "{{ dns_domain_name }}"
     type: text
 
 - name: Set the LoadGen RunAsProfiles configuration property DomainController
