--- a/ansible/vars/domain.yml
+++ b/ansible/vars/domain.yml
@@ -1,8 +1,12 @@
 ---
+ansible_user: "ansible@{{ hostvars['localhost']['dns_domain_name'] }}"
+ansible_password: "{{ hostvars['localhost']['ansible'] }}"
 dns_domain_name: "{{ hostvars['localhost']['dns_domain_name'] }}"
 domain_controller: "{{ groups['dc'][0] }}"
-domain_admin_user: "{{ hostvars['localhost']['ansible_domain_user'] }}@{{ hostvars['localhost']['dns_domain_name'] }}"
-domain_password: "{{ hostvars['localhost']['ansible_domain_password'] }}"
+local_user: "{{ hostvars['localhost']['ansible_local_user'] }}"
+local_password: "{{ hostvars['localhost']['ansible_local_password'] }}"
+domain_admin_user: "ansible@{{ hostvars['localhost']['dns_domain_name'] }}"
+domain_password: "{{ hostvars['localhost']['ansible'] }}"
 reverse_dns_zone: "{{ hostvars['localhost']['reverse_dns_zone'] }}"
 dhcp_router: "{{ hostvars['localhost']['dhcp_router'] }}"
 dhcp_subnetmask: "{{ hostvars['localhost']['dhcp_subnetmask'] }}"
