--- a/ansible/domain.yml
+++ b/ansible/domain.yml
@@ -14,6 +14,4 @@
     - ansible.yml
     - domain.yml
     - accounts.yml
-  vars:
-    ansible_user: "{{ hostvars['localhost']['ansible_local_user'] }}"
-    ansible_password: "{{ hostvars['localhost']['ansible_local_password'] }}"
+    - local.yml
