--- a/ansible/citrix-delivery-controller.yml
+++ b/ansible/citrix-delivery-controller.yml
@@ -1,21 +1,26 @@
 ---
+- hosts: localhost
+  connection: local
+  gather_facts: yes
+  tasks:
+  - name: Install requirements
+    include_tasks: vault.yml
+
 - name: Domain join the Citrix Delivery Controller
-  hosts: ctx_ddc
+  hosts: citrix_ddc
   roles:
     - domain-join
   vars_files:
     - ansible.yml
-    - domain.yml
+    - local.yml
   vars:
-    ansible_user: "{{ local_admin_user }}"
+    ou_path: "OU=Infra,OU=Machines,OU=GO"
 
 - name: Install and configure Citrix Delivery Controller
-  hosts: ctx_ddc
+  hosts: citrix_ddc
   roles:
     - citrix-delivery-controller
   vars_files:
-    - ansible.yml
     - citrix.yml
+    - ansible.yml
     - domain.yml
-  vars:
-    ansible_user: "{{ domain_admin_user }}"
