--- a/ansible/citrix-storefront.yml
+++ b/ansible/citrix-storefront.yml
@@ -1,8 +1,24 @@
 ---
-- name: Citrix Storefront
-  hosts: ctx_sf
+- hosts: localhost
+  connection: local
+  gather_facts: yes
+  tasks:
+  - name: Install requirements
+    include_tasks: vault.yml
+
+- name: Domain join the Citrix Storefront
+  hosts: citrix_sf
   roles:
     - domain-join
+  vars_files:
+    - ansible.yml
+    - local.yml
+  vars:
+    ou_path: "OU=Infra,OU=Machines,OU=GO"
+
+- name: Citrix Storefront
+  hosts: citrix_sf
+  roles:
     - citrix-storefront
   vars_files:
     - ansible.yml
