--- a/ansible/roles/citrix-delivery-controller/tasks/install.yml
+++ b/ansible/roles/citrix-delivery-controller/tasks/install.yml
@@ -12,6 +12,7 @@
       win_psmodule:
         name: PendingReboot
         state: present
+        accept_license: true
       retries: 3
       delay: 10
       register: result
@@ -93,16 +94,10 @@
         path: "C:\\Download\\Citrix\\{{citrix.source}}"
       register: citrix_iso
 
-    - name: Copy file from UNC path
-      win_copy:
-        src: "{{citrix.path}}\\v{{citrix.version}}\\{{citrix.source}}"
+    - name: Download Citrix ISO
+      win_get_url:
+        url: "{{citrix.path}}/{{citrix.version}}/{{citrix.source}}"
         dest: "C:\\Download\\Citrix\\{{citrix.source}}"
-        remote_src: true
-      vars:
-        ansible_become: true
-        ansible_become_user: "{{ ansible_user }}"
-        ansible_become_password: "{{ ansible_password }}"
-        ansible_become_method: runas
       when: citrix_iso.stat.exists == false
 
     - name: Register iso path
