--- a/ansible/loadgen.yml
+++ b/ansible/loadgen.yml
@@ -9,18 +9,28 @@
 #   - name: Start the Azure Key Vault actions
 #     include_tasks: azure-keyvault.yml
 
-- name: LoadGen Bots
-  hosts: lg_bots
+- hosts: localhost
+  connection: local
+  gather_facts: yes
+  tasks:
+  - name: Install requirements
+    include_tasks: vault.yml
+
+- name: Domain join the LoadGen bots
+  hosts: bots
   roles:
-  - domain-join
-  - citrix-receiver
-  - loadgen-agent
+    - domain-join
+  vars_files:
+    - ansible.yml
+    - local.yml
   vars:
-    dns_domain_name: 'GO.EUC'
-    domain_name: GO
-    domain_controller: "{{ groups['dc'][0] }}"
-    domain_admin_user: "GO\\{{ ansible_user }}"
-    ansible_connection: winrm
-    ansible_winrm_transport: ntlm
-    ansible_winrm_server_cert_validation: ignore
-    ansible_port: 5985
+    ou_path: "OU=Bots,OU=Machines,OU=GO"
+
+- name: Install and configure the LoadGen bots
+  hosts: bots
+  roles:
+    - citrix-receiver
+  vars_files:
+    - ansible.yml
+    - domain.yml
+    - loadgen.yml
