--- a/ansible/roles/citrix-delivery-controller/tasks/install.yml
+++ b/ansible/roles/citrix-delivery-controller/tasks/install.yml
@@ -8,6 +8,9 @@
 - name: Block for Citrix installation
   block:
 
+    - name: Install NuGet
+      win_shell: Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force
+
     - name: Check for PendingReboot module
       win_psmodule:
         name: PendingReboot
