--- a/ansible/roles/windows-image/tasks/adobe-reader-dc.yml
+++ b/ansible/roles/windows-image/tasks/adobe-reader-dc.yml
@@ -1,7 +1,7 @@
 ---
-- name: Update fact to CitrixWorkspaceApp
+- name: Update fact to AdobeAcrobatReaderDC
   set_fact:
-    app_name: CitrixWorkspaceApp
+    app_name: AdobeAcrobatReaderDC
 
 - name: "Collect Evergreen info for {{ app_name }}"
   win_uri:
@@ -13,11 +13,11 @@
 
 - name: "Set Evergreen object for {{ app_name }}"
   set_fact:
-    app_details: "{{ app.json | json_query('[?Stream == `Current`]') | first }}"
+    app_details: "{{ app.json | json_query('[?Architecture == `x64` && Language == `MUI`]') | first }}"
 
 - name: "Install {{ app_details.Title }} {{ app_details.Version }}"
   win_package:
     path: "{{ app_details.URI }}"
-    arguments: /silent /noreboot /AutoUpdateCheck=disabled
+    arguments: /sAll /rs /msi EULA_ACCEPT=YES
     expected_return_code: [0, 3, 3010]
     state: present
