--- a/ansible/vars/citrix.yml
+++ b/ansible/vars/citrix.yml
@@ -1,7 +1,7 @@
 ---
 citrix:
-  version: '2212'
-  source: Citrix_Virtual_Apps_and_Desktops_7_2212.iso
+  version: '2305'
+  source: Citrix_Virtual_Apps_and_Desktops_7_2305.iso
   path: "http://10.2.0.6:8080/Citrix/CVAD"
   site: Default
   database_port: 1433
@@ -12,6 +12,9 @@ citrix:
   role: Full Administrator
   scope: All
   grooming: 365
+  optimizer:
+    path: "http://10.2.0.6:8080/Citrix/Optimizer"
+    version: 3103
   licensing:
     port: 27000
     model: Concurrent
