--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,12 @@ jobs:
         run: |
           curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
           tflint --format junit --recursive > tflint-result.xml
+      
+      - name: Checkov
+        continue-on-error: true
+        run: |
+          pip3 install checkov
+          checkov -o junitxml > checkov-results.xml
 
       - name: Publish test results
         uses: EnricoMi/publish-unit-test-result-action@v2
